# radpro-wifi-bridge

./: .gitignore  CMakeLists.txt  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  NOTICE.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
.reuse/: dep5
boards/: esp32-s3-devkitc-1-n16r8.json
components/usb_host_cdc_acm/: cdc_acm_host.c
components/usb_host_vcp/: CMakeLists.txt  idf_component.yml
components/usb_host_vcp/include/usb/: vcp.hpp
data/portal/: backup.html  bridge-info.html  device-info.html  gmc.html  logs.html  menu.html  mqtt.html  osem.html  ota.html  portal-head-bootstrap.js  portal-locale.js  portal.css  radmon.html  safecast.html
docs/: OTA.md  assembly.md  board-requirements.md  gmcmap.md  index.html  manifest.json  mqtt-home-assistant.md  openradiation.md  opensensemap.md  radmon.md  safecast.md
docs/case/: ESP32-S3 Bottom.stl  ESP32-S3 Button 2x.stl  ESP32-S3 Insert.stl  ESP32-S3 Top.stl
docs/firmware/: README.md
docs/web-install/: index.html  manifest.json
lib/AppSupport/: library.json
lib/DeviceManager/: DeviceManager.cpp  DeviceManager.h  PeripheralStarter.cpp  PeripheralStarter.h  library.json
lib/UsbCdcHost/: UsbAttachDelayPolicy.h  UsbCdcHost.cpp  UsbCdcHost.h  UsbDiagnosticMessages.h
src/: BridgeDiagnostics.cpp  BridgeDiagnostics.h  UsbRecoveryPolicy.h  app_main.cpp  main.cpp  tinyusb_overrides.h
test/host/: bridge_led_policy_test.cpp  cooperative_pump_test.cpp  gmcmap_payload_test.cpp  (+32 more)
tools/: auto_uploadfs.py  copy_firmware.py  create_ota_zip.py  fs_partition.py
(+83 files in other folders)
